src/objects/AddressRoleBusinessContext__e.object
<CustomObject>
    <description>Platform event published when an Address Role Business Context is created, updated, deleted or undeleted</description>
    <fields>
        <fullName>EventType__c</fullName>
        <description>The type of event which generated the event. It may be: Insert, Update, Delete, Undelete</description>
        <label>EventType</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>id of the record where the plateform event is triggered</description>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>name of the record type of the object where the plateform event is triggered</description>
        <label>RecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Address Role Business Context</label>
    <pluralLabel>Addresses Role Business Context</pluralLabel>
</CustomObject>